src/components/UI/Button.scss
.button {
  background-color: rgb(216, 91, 83, 0.7);
  align-items: center;
  border: none;
  box-sizing: border-box;
  color: white;
  cursor: pointer;
  display: inline-flex;
  font-family: Inter, sans-serif;
  font-size: 12px;
  font-weight: 600;
  height: 48px;
  justify-content: center;
  letter-spacing: -0.8px;
  min-width: 20px;
  outline: 0;
  padding: 5px 10px;
  text-align: center;
  text-decoration: none;
  transition: all 0.3s;
  user-select: none;
  -webkit-user-select: none;
  touch-action: manipulation;
  border-radius: 5px;

  &:hover,
  &:focus {
    color: #fff;
  }

  &--remove {
    color: #fff;
    background-color: rgba(216, 91, 83, 0.7);
    font-size: 13px;
    width: 180px;
    height: auto;
    padding: 10px 0px;
   

    &:focus {
      width: 210px;

    }

    &:hover {
      color: white;
      background-color: rgba(216, 91, 83, 0.9);
      box-shadow: 6px 0px 0px rgb(255, 255, 255, 0.2);
    }

    &:active {
      color: black;
      fill: black;
    }
  }

  &--view-all {
    color: #fff;
    background: rgba(66, 65, 65, 0.2);
    font-size: 15px;
    width: 170px;
    height: 60px;
    border: 1px dashed rgb(216, 91, 83);
    padding: 12px 26px;
    border-radius: 50px;

    &:focus {
      width: 175px;
      background-color: rgb(51, 152, 219, 0.5)
    }

    &:hover {


      box-shadow: 6px 0px 0px rgb(216, 91, 83, 0.5);
    }

    &:active {
      color: black;
      fill: black;
    }
  }

  &--view {
    background-color: #d85b53;
    width: 170px;
    height: 40px;
    font-size: 12px;
    background-color: rgba(216, 91, 83, 0.9);
    border: 0;
    color: #fff;
    margin-right: 40px;

    &:focus {
      width: 175px;
      background-color: rgba(216, 91, 83, 0.7);
    }

    &:hover {
      color: white;

      box-shadow: 6px 0px 0px rgb(255, 255, 255, 0.2);
    }

    &:active {
      color: black;
      fill: black;
    }
  }

  &--back {
    background-color: rgb(51, 152, 219, 0.6);
    width: 170px;
    height: 40px;
    font-size: 15px;
    background: linear-gradient(45deg, rgba(216, 91, 83) 5%);
    border-radius: 15px;
    color: #fff;


    &:focus {
      width: 175px;

    }

    &:hover {
      color: white;
      background-color: rgb(51, 152, 219, 0.9);
      box-shadow: 6px 0px 0px rgb(255, 255, 255, 0.2);
    }

    &:active {
      color: black;
      fill: black;
    }
  }

  &__icon {
    width: 30px;
    margin-right: 10px;
  }


  @media only screen and (min-width: 280px) and (max-width: 500px) {
    &--view {
      background-color: #d85b53;
      width: 110px;
      height: 20px;
      font-size: 8px;
      color: #fff;
      margin-top: 10px;

    &:focus {
      width: 175px;
      background-color: rgba(216, 91, 83, 0.7);
    }

    &:hover {
      color: white;

      box-shadow: 6px 0px 0px rgb(255, 255, 255, 0.2);
    }

    &:active {
      color: black;
      fill: black;
    }
    }
    &--remove {
      width: 110px;
      height: auto;
      padding: 5px 5px;
      font-size: 10px;
      border-radius: 5px;
    }

    &--get-started {
      width: 70px;
      height: 30px;
      font-size: 9px;
      margin-top: 10px;
    }

    &--view-all {
      margin-top: 20px;
      font-size: 10px;
      width: 100px;
      height: 30px;
      padding: 8px 13px;
      border-radius: 50px;
      

      &:focus {
        width: 65px;
        background-color: rgb(51, 152, 219, 0.5)
      }

      &:hover {


        box-shadow: 6px 0px 0px rgb(216, 91, 83, 0.5);
      }

      &:active {
        color: black;
        fill: black;
      }
    }

  

    &__icon {
      width: 10px;
      margin-right: 5px;
    }

    &--back {
      background: rgba(66, 65, 65, 0.7);
      width: 110px;
      height: 30px;
      font-size: 10px;
      background: linear-gradient(45deg, rgba(216, 91, 83) 5%);
      border-radius: 15px;
      color: #fff;


      &:focus {
        width: 115px;
        background-color: rgb(51, 152, 219, 0.5)
      }

      &:hover {
        color: white;

        box-shadow: 6px 0px 0px rgb(255, 255, 255, 0.2);
      }

      &:active {
        color: black;
        fill: black;
      }
    }

    &--view {
      background-color: #d85b53;
      width: 120px;
      height: 20px;
      font-size: 10px;
      background-color: rgba(216, 91, 83, 0.9);
      border: 0;
      color: #fff;
      margin-right: 15px;
  
      &:focus {
        width: 175px;
        background-color: rgba(216, 91, 83, 0.7);
      }
  
      &:hover {
        color: white;
  
        box-shadow: 6px 0px 0px rgb(255, 255, 255, 0.2);
      }
  
      &:active {
        color: black;
        fill: black;
      }
    }
  }


  @media screen and (min-width: 481px) and (max-width: 1080px) {
    &--remove {
      width: 120px;
      height: auto;
      padding: 7px 2px;
      font-size: 10px;
    }

    &--view {

      width: 150px;
      height: 35px;
      font-size: 10px;

      color: #fff;
      margin-right: 20px;

      &:focus {
        width: 145px;
        background-color: rgba(216, 91, 83, 0.7);
      }
    }

    &__icon {
      width: 20px;

    }

    &--view-all {
      margin-top: 10px;
      font-size: 10px;
      width: 130px;
      height: 40px;
      padding: 8px 13px;
      border-radius: 50px;

      &:focus {
        width: 65px;
        background-color: rgb(51, 152, 219, 0.5)
      }

      &:hover {


        box-shadow: 6px 0px 0px rgb(216, 91, 83, 0.5);
      }

      &:active {
        color: black;
        fill: black;
      }
    }

    &--back {
      background: rgba(66, 65, 65, 0.7);
      width: 110px;
      height: 30px;
      font-size: 10px;
      background: linear-gradient(45deg, rgba(216, 91, 83) 5%);
      border-radius: 15px;
      color: #fff;


      &:focus {
        width: 115px;
        background-color: rgb(51, 152, 219, 0.5)
      }

      &:hover {
        color: white;

        box-shadow: 6px 0px 0px rgb(255, 255, 255, 0.2);
      }

      &:active {
        color: black;
        fill: black;
      }
    }

  }


  @media only screen and (min-width: 1081px) and (max-width: 1680px) {
    &--remove {
      width: 150px;
      height: auto;
      padding: 5px 5px;
    }


    &--view {

      width: 125px;
      height: 35px;
      font-size: 10px;

      color: #fff;
      margin-right: 20px;

      &:focus {
        width: 130px;
        background-color: rgba(216, 91, 83, 0.7);
      }
    }

    &__icon {
      width: 20px;

    }
  }
}

